Fixing header overflow problems (noticeable in Node Editor Documentation)

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ body {
 }
 .headerheight {
 	height: 3em;
+	max-height: 10vw;
+	min-height: 2.5em;
 }
 @media screen and (min-width: 65em) { 
 	.header { padding-left: 5%; padding-right: 5%; }
@@ -86,6 +88,8 @@ body {
 	vertical-align: middle;
 	width: 1.4em;
 	height: 1.4em;
+	max-width: 10vw;
+	max-height: 10vw;
 	margin: 0 0.2em;
 }
 .headerLogo span {
@@ -472,6 +476,9 @@ html.supports-cssgradients .bannerShadowBottom
 	border-color: var(--secondaryCol);
 	border-radius: 4px;
 
+}
+code {
+	word-wrap: break-word;
 }
 /* Minimum paragraph width */
 h1:before, h2:before, h3:before, h4:before, h5:before, h6:before, p:before {
